get organization status
